#16 - Duong04 - Updated Restful Api authentication
